# N-Body-Simulation

./: .gitignore  CMakeLists.txt  PHASE2_COMPLETE.md  README.md  build.bat  manual_build.bat  plan.txt  run_simulation.bat  simple_test.cu
include/: barnes_hut_force.h  boundaries.h  errors.h  initial_conditions.h  morton_code.h  nbody_simulation.h  octree.h  particle.h  particle_utils.h  render_kernel.h  renderer.h
shaders/: com.frag  particle.frag  particle.vert
src/: barnes_hut_force.cu  benchmark.cu  boundaries.cu  initial_conditions.cu  main.cu  main_callbacks.cpp  morton_code.cu  nbody_simulation.cu  octree.cu  particle.cu  particle_utils.cu  phase2_test.cu  render_kernel.cu  renderer.cpp
